--- a/src/Pages/Home/Home.module.scss
+++ b/src/Pages/Home/Home.module.scss
@@ -3,11 +3,11 @@
     height: 100%;
     width: 90%;
     display: grid;
-    grid-template-rows: repeat(auto-fill,35px);
+    grid-template-rows: repeat(auto-fill,40px);
    
     .table__head{
         display: grid;
-        grid-template-columns: repeat(5,0.6fr);
+        grid-template-columns: 0.2fr repeat(4,0.6fr);
         font-weight: bolder;
        grid-template-rows: repeat(1,30px);
     }
