--- a/src/components/Line/Line.module.scss
+++ b/src/components/Line/Line.module.scss
@@ -1,8 +1,11 @@
 
     .table__line{
         display: grid;
-        grid-template-columns: repeat(5,0.6fr);
-        background: linear-gradient( #f3dabd, #c5aa8b);
+        grid-template-columns: 0.2fr repeat(4,0.6fr);
+        align-content: center;
+        background: rgba(224, 202, 170, 0.573);
+        border: 1px solid #608141bf;
+        border-radius: 10px;
         .table__number{
             color: black;
         }
@@ -18,4 +21,22 @@
         .table__buttons{
             color: black;
         }
+    }
+    button{
+        
+        // height: 10px;
+        // min-width: 70px;
+        padding: 5px;
+        border: none;
+        text-decoration: none;
+        background: none;
+
+    }
+    
+    
+    button:hover {
+        cursor: pointer;
+        
+        position: relative;
+        top: 3px;
     }
